Add github avatar to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,6 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
+    <p style="margin: auto">{% avatar mletterle size=128%}</p>
     <p>{{ site.description }}</p>
   </div>
 
