--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,10 +19,10 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/lanyon.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/local.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
+  <script src="https://kit.fontawesome.com/aaedcbf26d.js" crossorigin="anonymous"></script>
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/assets/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
 
   <!-- RSS -->
