--- a/assets/css/poole.css
+++ b/assets/css/poole.css
@@ -151,6 +151,7 @@ abbr[title] {
 code,
 pre {
   font-family: Menlo, Monaco, "Courier New", monospace;
+  overflow: auto;
 }
 code {
   padding: .25em .5em;
@@ -168,8 +169,6 @@ pre {
   line-height: 1.4;
   white-space: pre;
   white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
   background-color: #f9f9f9;
 }
 pre code {
