--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,10 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/lanyon.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/local.css">
   <script src="https://kit.fontawesome.com/aaedcbf26d.js" crossorigin="anonymous"></script>
+  
+  {% if site.google_analytics and jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/assets/apple-touch-icon-precomposed.png">
