Add keybase to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,6 +14,7 @@
     <p>
         <a href="http://twitter.com/{{ site.author.twitter }}" target="_blank"><span class="fab fa-twitter fa-lg"></span></a>
         <a href="http://github.com/{{ site.author.github }}" target="_blank"><span class="fab fa-github fa-lg"></span></a>
+        <a href="http://keybase.io/{{ site.author.keybase }}" target="_blank"><span class="fab fa-keybase fa-lg"></span></a>
         <a href="http://stackoverflow.com/users/{{ site.author.stackoverflow }}" target="_blank"><span class="fab fa-stack-overflow fa-lg"></span></a>
     </p>
   </div>
