--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,10 +12,11 @@
     <p>{% avatar mletterle size=128%}</p>
     <p>{{ site.description }}</p>
     <p>
-        <a href="http://twitter.com/{{ site.author.twitter }}" target="_blank"><span class="fab fa-twitter fa-lg"></span></a>
-        <a href="http://github.com/{{ site.author.github }}" target="_blank"><span class="fab fa-github fa-lg"></span></a>
-        <a href="http://keybase.io/{{ site.author.keybase }}" target="_blank"><span class="fab fa-keybase fa-lg"></span></a>
-        <a href="http://stackoverflow.com/users/{{ site.author.stackoverflow }}" target="_blank"><span class="fab fa-stack-overflow fa-lg"></span></a>
+        <a href="https://twitter.com/{{ site.author.twitter }}" target="_blank"><span class="fab fa-twitter fa-lg"></span></a>
+        <a href="https://github.com/{{ site.author.github }}" target="_blank"><span class="fab fa-github fa-lg"></span></a>
+        <a href="https://keybase.io/{{ site.author.keybase }}" target="_blank"><span class="fab fa-keybase fa-lg"></span></a>
+        <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}" target="_blank"><span class="fab fa-linkedin fa-lg"></span></a>
+        <a href="https://stackoverflow.com/users/{{ site.author.stackoverflow }}" target="_blank"><span class="fab fa-stack-overflow fa-lg"></span></a>
     </p>
   </div>
 
